tests/functional/lang/parse-fail-unexpected-rec.err.exp
error: syntax error, unexpected 'rec', expecting identifier or 'or' or '${' or '"'
       at «stdin»:1:3:
            1| a.rec
             |   ^
            2|
